# bantam

./: .gitignore  .gitmodules  .travis.yml  README.md
bantam-service/: bantam-service.cabal  bantam-service.lock-7.8.4  bantam-service.lock-8.0.2
bantam-service/assets/css/: styles.css
bantam-service/main/: bantam-service.hs
bantam-service/src/Bantam/: Service.hs
bantam-service/src/Bantam/Service/: Api.hs  Data.hs  Http.hs  Path.hs  View.hs  Webship.hs
bantam-service/src/Bantam/Service/Api/: Fight.hs  Login.hs
bantam-service/src/Bantam/Service/Data/: Fight.hs
bantam-service/src/Bantam/Service/Resource/: Assets.hs  Fight.hs  Login.hs  Session.hs
bantam-service/src/Bantam/Service/S3/: Fight.hs  Login.hs
bantam-service/src/Bantam/Service/View/: Error.hs  Fight.hs  Frame.hs  Login.hs
bantam-service/src/Bantam/Service/Wai/: Cookie.hs  Form.hs
